--- a/package.json
+++ b/package.json
@@ -1,16 +1,26 @@
 {
   "name": "todolist-with-makeHTTPrequest",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.2",
-    "express": "^4.16.3"
-  }
+    "express": "^4.16.3",
+    "fs": "0.0.1-security"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/girlslearningcodeyul/todolist-makeHTTPRequest.git"
+  },
+  "bugs": {
+    "url": "https://github.com/girlslearningcodeyul/todolist-makeHTTPRequest/issues"
+  },
+  "homepage": "https://github.com/girlslearningcodeyul/todolist-makeHTTPRequest#readme",
+  "description": ""
 }
